Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-34504

PURGE BINARY LOGS not working anymore

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 11.4.1, 11.4.2
    • 11.4.3
    • Replication
    • None

    Description

      We upgraded all our MariaDB/Galera clusters last week from 10.11.7 to 11.4.2.

      Since then we noticed that the binary logs aren't automaticly purged anymore on many nodes. (Yes, new binlogs are created)

      Also on manually calling 'PURGE BINARY LOGS', we don't get any error, but it does nothing.

      We don't see any issues on standalone MariaDB nodes, so it might be Galera related.

      It looks like the purging does work on Galera member nodes where an async replica is connected.

      Relevant settings;

      expire_logs_days = 1
      log_bin
      log_slave_updates
      

      Attachments

        Issue Links

          Activity

            People

              monty Michael Widenius
              a.bieleman André Bieleman
              Votes:
              0 Vote for this issue
              Watchers:
              9 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 7h
                  7h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.